<resources>
    <string name="app_name">NEWS</string>

    <string name="placeholder">PLACEHOLDER</string>
    <string name="empty_text">Sorry…There is no news currently.</string>

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">NEWS Settings</string>


    <string name="settings_topics_label">Topics</string>
    <string name="settings_topics_key">q</string>
    <string name="settings_topics_default" translatable="false">@string/settings_topics_tech_value</string>

    <string name="settings_topics_tech_label">Technology</string>
    <string name="settings_topics_tech_value" translatable="false">technology</string>

    <string name="settings_topics_eco_label">Economy</string>
    <string name="settings_topics_eco_value" translatable="false">economy</string>

    <string name="settings_topics_lit_label">Literature</string>
    <string name="settings_topics_lit_value" translatable="false">literature</string>

    <string name="settings_default_date">2018-01-01</string>
    <string name="settings_from_date_label">From date</string>
    <string name="settings_from_date_key" translatable="false">from-date</string>
    <string name="settings_to_date_label">To date</string>
    <string name="settings_to_date_key" translatable="false">to-date</string>
</resources>
